force-app/main/default/objects/Milestone__c/Milestone__c.object-meta.xml
<CustomObject>
    <description>[i2PMS] Project별 Milestone(공정별 또는 Sprint단위) 관리 Object</description>
    <label>Milestone</label>
    <nameField>
        <label>Milestone</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>