force-app/main/default/objects/Milestone__c/fields/CancelHolding__c.field-meta.xml
<CustomField>
    <fullName>CancelHolding__c</fullName>
    <inlineHelpText>Task 를 중지하거나 취소하는 경우 선택</inlineHelpText>
    <label>(X)Cancel/Holding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Holding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>