force-app/main/default/objects/Milestone__c/fields/fm_DurationRemain__c.field-meta.xml
<CustomField>
    <fullName>fm_DurationRemain__c</fullName>
    <formula>IF (TEXT(Stage__c) &lt;&gt; &apos;Completed&apos; &amp;&amp; ISBLANK(TEXT(Cancel_Record__c)),
IF (TODAY() &lt;= PlanEnd__c, Text(PlanEnd__c - TODAY()), &quot;Overdue&quot;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration(Remain)</label>
    <type>Text</type>
</CustomField>