force-app/main/default/objects/Milestone__c/fields/fm_DurationTotal__c.field-meta.xml
<CustomField>
    <fullName>fm_DurationTotal__c</fullName>
    <formula>( PlanEnd__c - PlanStart__c ) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration(Total)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>