force-app/main/default/objects/Milestone__c/fields/fm_Emoji__c.field-meta.xml
<CustomField>
    <fullName>fm_Emoji__c</fullName>
    <formula>IF ( TEXT ( Cancel_Record__c  ) = &apos;Upper&apos;, &apos;⚠️&apos;,
IF ( TEXT ( Cancel_Record__c ) = &apos;Own&apos;, &apos;❌&apos;,
IF ( TEXT ( Stage__c ) = &apos;Delayed(Start)&apos; || TEXT ( Stage__c ) = &apos;Delayed(End)&apos;, &apos;🔴&apos;,
IF ( TEXT ( Stage__c ) = &apos;Completed&apos;, &apos;💯&apos;,
IF ( TEXT ( Stage__c ) = &apos;In Progress&apos; ||  TEXT ( Stage__c ) = &apos;In Review&apos; ||  TEXT ( Stage__c ) = &apos;Approved&apos;, &apos;🟢&apos;,
IF ( TEXT ( Stage__c ) = &apos;Ready&apos;, &apos;🔘&apos;,&apos;&apos;)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Emoji</label>
    <type>Text</type>
</CustomField>