force-app/main/default/objects/Milestone__c/fields/fm_EndTaskPlanvsActual__c.field-meta.xml
<CustomField>
    <fullName>fm_EndTaskPlanvsActual__c</fullName>
    <formula>Text ( ru_EndTaskPlan__c ) &amp; &apos; / &apos; &amp; Text ( ru_EndTaskActual__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Task(Plan vs. Actual)</label>
    <type>Text</type>
</CustomField>