force-app/main/default/objects/Milestone__c/fields/fm_isDailyEmailAlert__c.field-meta.xml
<CustomField>
    <fullName>fm_isDailyEmailAlert__c</fullName>
    <formula>Project__r.Enable_Daily_Delay_Task_Alert__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Daily Email Alert</label>
    <type>Checkbox</type>
</CustomField>