force-app/main/default/objects/Milestone__c/fields/fm_isWeeklyEmailAlert__c.field-meta.xml
<CustomField>
    <fullName>fm_isWeeklyEmailAlert__c</fullName>
    <formula>Project__r.Enable_Weekly_Task_Alert__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Weekly Email Alert</label>
    <type>Checkbox</type>
</CustomField>