force-app/main/default/objects/Milestone__c/fields/fm_MilestoneLink__c.field-meta.xml
<CustomField>
    <fullName>fm_MilestoneLink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ Id ,  fm_Emoji__c &amp; &apos; &apos; &amp; Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone(L)</label>
    <type>Text</type>
</CustomField>