force-app/main/default/objects/Milestone__c/fields/fm_MilestoneOwnerLink__c.field-meta.xml
<CustomField>
    <fullName>fm_MilestoneOwnerLink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ MilestoneOwner__r.Id , MilestoneOwner__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Owner(L)</label>
    <type>Text</type>
</CustomField>