force-app/main/default/objects/Milestone__c/fields/fm_MilestonePick__c.field-meta.xml
<CustomField>
    <fullName>fm_MilestonePick__c</fullName>
    <description>Project Task Management Flow 에서 Milestone 선택 목록값 표시용 필드</description>
    <formula>fm_MilestoneLink__c &amp; &apos;__&apos; &amp; fm_Timeline__c &amp; &apos;__&apos; &amp; fm_TaskSummary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MilestonePick</label>
    <type>Text</type>
</CustomField>