force-app/main/default/objects/Milestone__c/fields/fm_Progress__c.field-meta.xml
<CustomField>
    <fullName>fm_Progress__c</fullName>
    <formula>( ru_EndTaskActual__c +  ru_InProgressTask__c ) /  ru_TotalTask__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress(진행 포함)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>