force-app/main/default/objects/Milestone__c/fields/fm_TaskSummary__c.field-meta.xml
<CustomField>
    <fullName>fm_TaskSummary__c</fullName>
    <formula>TEXT ( ru_TotalTask__c ) &amp;&apos; / &apos;&amp; TEXT ( ru_ReadyTask__c ) &amp;&apos; / &apos;&amp; TEXT ( ru_InProgressTask__c  ) &amp;&apos; / &apos;&amp; TEXT ( ru_EndTaskActual__c ) &amp;&apos; / &apos;&amp; TEXT ( ru_DelayedTask__c ) &amp;&apos; / &apos;&amp; TEXT ( ru_CanceledTask__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Summary</label>
    <type>Text</type>
</CustomField>