force-app/main/default/objects/Milestone__c/fields/fm_TimelineActual__c.field-meta.xml
<CustomField>
    <fullName>fm_TimelineActual__c</fullName>
    <formula>IF(ISBLANK(ActualStart__c),&apos;None&apos;,
IF(NOT(ISBLANK(ActualStart__c)) &amp;&amp; ISBLANK(ActualEnd__c), 
   RIGHT(TEXT(YEAR(ActualStart__c)),2) &amp; &apos;/&apos; &amp; TEXT(MONTH(ActualStart__c)) &amp; &apos;/&apos; &amp; TEXT(DAY(ActualStart__c))
						&amp; &apos; ~ None&apos;,
						RIGHT(TEXT(YEAR(ActualStart__c)),2) &amp; &apos;/&apos; &amp; TEXT(MONTH(ActualStart__c)) &amp; &apos;/&apos; &amp; TEXT(DAY(ActualStart__c))
      &amp; &apos; ~ &apos; &amp;
      RIGHT(TEXT(YEAR(ActualEnd__c)),2) &amp; &apos;/&apos; &amp; TEXT(MONTH(ActualEnd__c)) &amp; &apos;/&apos; &amp; TEXT(DAY(ActualEnd__c))
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timeline(Actual)</label>
    <type>Text</type>
</CustomField>