force-app/main/default/objects/Milestone__c/fields/fm_TimelinePlan__c.field-meta.xml
<CustomField>
    <fullName>fm_TimelinePlan__c</fullName>
    <formula>RIGHT(TEXT(YEAR(PlanStart__c)),2) &amp; &apos;/&apos; &amp; TEXT(MONTH(PlanStart__c)) &amp; &apos;/&apos; &amp; TEXT(DAY(PlanStart__c))
&amp; &apos; ~ &apos; &amp;
RIGHT(TEXT(YEAR(PlanEnd__c)),2) &amp; &apos;/&apos; &amp; TEXT(MONTH(PlanEnd__c)) &amp; &apos;/&apos; &amp; TEXT(DAY(PlanEnd__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timeline(Plan)</label>
    <type>Text</type>
</CustomField>