force-app/main/default/objects/Milestone__c/fields/MilestoneOwner__c.field-meta.xml
<CustomField>
    <fullName>MilestoneOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Member__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Member__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Member__c</referenceTo>
    <relationshipName>Milestone</relationshipName>
    <type>Lookup</type>
</CustomField>