force-app/main/default/objects/Milestone__c/fields/PlanEnd__c.field-meta.xml
<CustomField>
    <fullName>PlanEnd__c</fullName>
    <label>Plan End</label>
    <type>Date</type>
</CustomField>