force-app/main/default/objects/Milestone__c/fields/PlanStart__c.field-meta.xml
<CustomField>
    <fullName>PlanStart__c</fullName>
    <label>Plan Start</label>
    <type>Date</type>
</CustomField>