force-app/main/default/objects/Milestone__c/fields/ru_ActualStartMIN__c.field-meta.xml
<CustomField>
    <fullName>ru_ActualStartMIN__c</fullName>
    <description>하위 Requirement - Actual Start 중 가장 빠른 날짜</description>
    <label>Actual Start MIN</label>
    <summarizedField>Requirement__c.ActualStart__c</summarizedField>
    <summaryFilterItems>
        <field>Requirement__c.Cancel_Record__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Requirement__c.Milestone__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>