force-app/main/default/objects/Milestone__c/fields/ru_CanceledTask__c.field-meta.xml
<CustomField>
    <fullName>ru_CanceledTask__c</fullName>
    <description>하위 Requirement - Canceled Task Sum</description>
    <label>Canceled Task</label>
    <summarizedField>Requirement__c.ru_CanceledTask__c</summarizedField>
    <summaryForeignKey>Requirement__c.Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>