force-app/main/default/objects/Milestone__c/fields/ru_DelayedTask__c.field-meta.xml
<CustomField>
    <fullName>ru_DelayedTask__c</fullName>
    <description>하위 Requirement - Delayed Task 의 Sum</description>
    <label>Delayed Task</label>
    <summarizedField>Requirement__c.fm_DelayedTask__c</summarizedField>
    <summaryForeignKey>Requirement__c.Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>