force-app/main/default/objects/Milestone__c/fields/ru_EndTaskActual__c.field-meta.xml
<CustomField>
    <fullName>ru_EndTaskActual__c</fullName>
    <description>하위 Requirement - End Task(Actual) 의 Sum</description>
    <label>End Task(Actual)</label>
    <summarizedField>Requirement__c.ru_EndTaskActual__c</summarizedField>
    <summaryForeignKey>Requirement__c.Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>