force-app/main/default/objects/Milestone__c/fields/ru_EndTaskPlan__c.field-meta.xml
<CustomField>
    <fullName>ru_EndTaskPlan__c</fullName>
    <description>하위 Requirement - End Task(Plan) 의 Sum</description>
    <label>End Task(Plan)</label>
    <summarizedField>Requirement__c.ru_EndTaskPlan__c</summarizedField>
    <summaryForeignKey>Requirement__c.Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>