force-app/main/default/objects/Milestone__c/fields/ru_InProgressTask__c.field-meta.xml
<CustomField>
    <fullName>ru_InProgressTask__c</fullName>
    <label>In Progress Task</label>
    <summarizedField>Requirement__c.ru_InProgressTask__c</summarizedField>
    <summaryForeignKey>Requirement__c.Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>