force-app/main/default/objects/Milestone__c/fields/ru_ReadyTask__c.field-meta.xml
<CustomField>
    <fullName>ru_ReadyTask__c</fullName>
    <description>하위 Requirement - Ready Task 의 Sum</description>
    <label>Ready Task</label>
    <summarizedField>Requirement__c.ru_ReadyTask__c</summarizedField>
    <summaryForeignKey>Requirement__c.Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>