force-app/main/default/objects/Milestone__c/fields/ru_StartTaskActual__c.field-meta.xml
<CustomField>
    <fullName>ru_StartTaskActual__c</fullName>
    <description>하위 Requirement - Start Task(Actual) 의 Sum</description>
    <label>Start Task(Actual)</label>
    <summarizedField>Requirement__c.ru_StartTaskActual__c</summarizedField>
    <summaryForeignKey>Requirement__c.Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>