force-app/main/default/objects/Milestone__c/fields/ru_StartTaskPlan__c.field-meta.xml
<CustomField>
    <fullName>ru_StartTaskPlan__c</fullName>
    <description>하위 Requirement - Start Task(Plan) 의 Sum</description>
    <label>Start Task(Plan)</label>
    <summarizedField>Requirement__c.ru_StartTaskPlan__c</summarizedField>
    <summaryForeignKey>Requirement__c.Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>