force-app/main/default/objects/Milestone__c/fields/ru_TotalTask__c.field-meta.xml
<CustomField>
    <fullName>ru_TotalTask__c</fullName>
    <description>하위 Requirement(Cancel 제외) Total Task 의 Sum</description>
    <label>Total Task</label>
    <summarizedField>Requirement__c.ru_TotalTask__c</summarizedField>
    <summaryForeignKey>Requirement__c.Milestone__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>