force-app/main/default/objects/Milestone__c/fields/Task_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Task_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Cancel</label>
    <type>Checkbox</type>
</CustomField>