force-app/main/default/objects/Milestone__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>MilestoneOwner__c</columns>
    <columns>PlanStart__c</columns>
    <columns>PlanEnd__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>fm_Progress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>